Worked on database connection class. Renamed class

--- a/COSC3506_Project/COSC3506_Project.csproj
+++ b/COSC3506_Project/COSC3506_Project.csproj
@@ -54,7 +54,7 @@
     <Compile Include="applicantForm.Designer.cs">
       <DependentUpon>applicantForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Connection.cs" />
+    <Compile Include="DBConnection.cs" />
     <Compile Include="signInForm.cs">
       <SubType>Form</SubType>
     </Compile>
