--- a/COSC3506_Project/COSC3506_Project.csproj
+++ b/COSC3506_Project/COSC3506_Project.csproj
@@ -48,13 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicantForm.cs">
+    <Compile Include="DBConnection.cs" />
+    <Compile Include="AddUserForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ApplicantForm.Designer.cs">
-      <DependentUpon>ApplicantForm.cs</DependentUpon>
+    <Compile Include="AddUserForm.Designer.cs">
+      <DependentUpon>AddUserForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBConnection.cs" />
+    <Compile Include="SecretaryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SecretaryForm.Designer.cs">
+      <DependentUpon>SecretaryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SignInForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,8 +75,8 @@
     <Compile Include="SystemAdminForm.Designer.cs">
       <DependentUpon>SystemAdminForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ApplicantForm.resx">
-      <DependentUpon>ApplicantForm.cs</DependentUpon>
+    <EmbeddedResource Include="AddUserForm.resx">
+      <DependentUpon>AddUserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SignInForm.resx">
       <DependentUpon>SignInForm.cs</DependentUpon>
