--- a/COSC3506_Project/COSC3506_Project.csproj
+++ b/COSC3506_Project/COSC3506_Project.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,12 +60,6 @@
     </Compile>
     <Compile Include="AddJobForm.Designer.cs">
       <DependentUpon>AddJobForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ChairForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChairForm.Designer.cs">
-      <DependentUpon>ChairForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CommentsForm.cs">
       <SubType>Form</SubType>
@@ -150,9 +145,6 @@
     <EmbeddedResource Include="AddUserForm.resx">
       <DependentUpon>AddUserForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChairForm.resx">
-      <DependentUpon>ChairForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CommentsForm.resx">
       <DependentUpon>CommentsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DownloadResumeForm.resx">
       <DependentUpon>DownloadResumeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyUserForm.resx">
+      <DependentUpon>ModifyUserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewApplicationForm.resx">
       <DependentUpon>NewApplicationForm.cs</DependentUpon>
